
syntax = "proto3";

option csharp_namespace = "GrpcService";

package user;

import "google/protobuf/empty.proto"; //需要使用空参数和空返回值时，需要使用这个协议文件

service User {
  rpc Register (UserDTO) returns (CommonResult);
  rpc Login (LoginDTO) returns (LoginResult);
  rpc Logout (LogoutDTO) returns (CommonResult);
  rpc GetAllUser (google.protobuf.Empty) returns (AllUser);
}

message UserDTO {
	string account = 1;
	string pwd = 2;
    string name = 3;
    int32 age = 4;
}

message LoginDTO{
	string accont = 1;
	string pwd = 2;
}

message LoginResult{
	string token = 1;
}

message LogoutDTO{
	string token = 1;
}

message CommonResult {
	string code = 1;
    string message = 2;
}

message AllUser{
	repeated UserDTO userList = 1;
}

